[gd_scene load_steps=2 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="RightWall" type="RayCast2D" parent="."]
position = Vector2( 11, 0 )
cast_to = Vector2( 100, 0 )

[node name="LeftWall" type="RayCast2D" parent="."]
position = Vector2( -11, 0 )
cast_to = Vector2( -100, 0 )

[node name="FloorRight" type="RayCast2D" parent="."]

[node name="FloorLeft" type="RayCast2D" parent="."]

[node name="PlatformDetector" type="RayCast2D" parent="."]
light_mask = 8

[node name="AttackArea" type="Area2D" parent="." groups=[
"Enemies",
]]
__meta__ = {
"_edit_group_": true
}

[node name="AttackArea" type="CollisionShape2D" parent="AttackArea"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
